# urmsimulator

./: AUTHORS  CMakeLists.txt  README.md  meson.build
data/: com.github.aleksandar-stefanovic.urmsimulator.appdata.xml  com.github.aleksandar-stefanovic.urmsimulator.appdata.xml.in  com.github.aleksandar-stefanovic.urmsimulator.desktop  com.github.aleksandar-stefanovic.urmsimulator.desktop.in  meson.build  urm.lang
debian/: changelog  control  copyright
po/: POTFILES  be.po  com.github.aleksandar-stefanovic.urmsimulator.pot  fr.po  ja.po  lt.po  lv.po  nl.po  pl.po  pt_BR.po  ro.po  sk.po  sl.po  tk.po
po/extra/: POTFILES  extra.pot  fr.po
src/: Application.vala  Instruction.vala  MainWindow.vala  Parser.vala  Processor.vala  Type.vala  URMSourceView.vala
src/widget/: LabeledSwitchBox.vala  URMSourceView.vala
